--- a/.github/workflows/repackage.yml
+++ b/.github/workflows/repackage.yml
@@ -9,6 +9,8 @@ jobs:
   build:
     permissions: write-all
     runs-on: ubuntu-20.04
+    container:
+      image: python:2.7.18-buster
     steps:
       - uses: actions/checkout@v4.1.1
       - name: Check Python Version
@@ -16,8 +18,10 @@ jobs:
           alias python=python2
           python --version
       - name: Run Setup
+        shell: bash
         run: |
           alias python=python2
+          sudo apt install dos2unix zip
           ./setupFML1.2.5.sh
       - name: Zip the Repository
         run: zip -r release.zip .
